genotype table : apply Y scrollbars to just the table, enabling fixed column headers
Make remaining controls area collapsible so Y scrollbar can be limited to just the table.
This enables the column headers to remain displayed when scrolling, as they are fixed.

matrix-view.js : add classNames: matrix-view, for CSS selector.  createOrUpdateTable() : height : use 100% for all cases because of applying Y scrollbar to just the table, probably nRows2HeightEx() is not required if further testing is OK.
manage-genotype.hbs : Wrap Configure Lookup with added panel-container.
manage-genotype.js : add @userSettings.showConfigureLookup, showControlsFilters.

app.scss :
.right-panel-genotype and .matrix-view : height: 100%, so that table (child) height is set.
don't set .wtHolder height, allow HandsOnTable to manage that.
.right-panel-genotype : remove Y scrollbar.
add .panel-parent.panel-children-are-closed : in manage-genotype, the 3 closed panel-container-s can be placed in a horizontal line when all closed.
use margin on div.genotype instead of .right-panel-genotype and .lookup-line > button

progressive-table.js : add table_getData_length() to handle ! table.getData.

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -1633,13 +1633,19 @@ div#goto-feature > div
   height: 100%;
 }
 
+.right-panel-genotype,
+.right-panel-genotype > .matrix-view
+{
+  height: 100%;
+}
+
 #observational-table {
   flex: 1;
 }
 
 #observational-table .wtHolder
 {
-  height : fit-content !important;
+  /* height : fit-content !important; */
 }
 /* .col-sample */
 #observational-table .head
@@ -1987,7 +1993,7 @@ body:not(.tablesPanelRight) .metaeditor-panel {
 
 
 #right-panel-content.right-panel-dataset,
-#right-panel-content.right-panel-genotype,
+// #right-panel-content.right-panel-genotype,
 {
   overflow-y: auto;
 }
@@ -2120,6 +2126,18 @@ div.genotype > div > div > textarea,
 {
   width: 20em;
 }
+/** plan to add .panel-children-are-closed when all panel-container children have showComponent=false.
+ * In the case of manage-genotype, the 3 closed panel-container-s can be placed in a horizontal line.
+  */
+.panel-parent.panel-children-are-closed
+{
+  display : flex;
+}
+.panel-parent.panel-children-are-closed > .panel-primary
+{
+  flex : 1;
+  margin-right : 1em;
+}
 
 .vcfGenotypeSamplesSelected
 {
@@ -2129,11 +2147,10 @@ div.genotype > div > div > textarea,
 }
 .right-panel-genotype
 {
-  margin-top: 1em;
 }
 div.genotype
 {
-  margin-left : 1em;
+  margin: 1em;
 }
 /* vertical space above labelled inputs in manage-genotype : lookup inputs dialog.
  * Don't apply to the x-toggle label (in div.x-toggle-component >) 
@@ -2178,7 +2195,6 @@ div.genotype label
 }
 .lookup-line > button {
   margin-top: auto;
-  margin-bottom: 1em;
 }
 .lookup-line > .interval-group {
   display: flex;
